small change without an error

--- a/wrestling_scrape.ipynb
+++ b/wrestling_scrape.ipynb
@@ -34,20 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "360fa651",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'r' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# The HTML as a python string (first five hundred characters)\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mr\u001b[49m\u001b[38;5;241m.\u001b[39mtext[:\u001b[38;5;241m500\u001b[39m]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'r' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'<!DOCTYPE html><html class=\"no-js\" lang=\"en\" data-reactroot=\"\"><head><meta charSet=\"utf-8\"/><meta http-equiv=\"Accept-CH\" content=\"DPR,Width,Viewport-Width\"/><meta name=\"aol-te-auth\" content=\"1c424580-0f86-4d9b-88b2-bc8c0d029d4c\"/><meta name=\"blitz\" content=\"mu-6e4ce5cd-57f20d11-7c0ecee9-d55c79e2\"/><meta name=\"msvalidate.01\" content=\"7A63840181953B2A5A1FEA25FB45A991\"/><meta name=\"robots\" content=\"NOODP,NOYDIR\"/><meta name=\"verify-v1\" content=\"+Ntj422Jc4V03qgBqLYbF3LMvrursV0X2btn2Zoqn9w=\"/><meta n'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -228,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "bbe6d42d",
    "metadata": {},
    "outputs": [
@@ -285,7 +284,7 @@
        " 'Ding Dongs']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
